--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,18 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
-	        		<li><a href="/blog">Blog</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
-        
+			
+			{{ content }}
+			
+			</div><!-- /.container -->
+			<footer>
+	    		<ul>
+	        		<li><a href="mailto:lienhartkelsey@gmail.com">email</a></li>
+	        		<li><a href="https://github.com/klienha/">github.com/klienha</a></li>
+				</ul>
+			</footer>
+		</body>
+	</html>
