--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,15 @@
-body {
-    margin: 60px auto;
-    width: 70%;
+
+
+.header {
+  padding: 80px; /* some padding */
+  text-align: center; /* center the text */
+  font-family: serif;
+    font-weight: normal;
+  background: #45a6c4; /* color of background */
+  color: rgb(255, 255, 255); /* white text color */
 }
-nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    padding: 0px;
-    list-style: none;
-    font-weight: bold;
+
+/* Increase the font size of the <h1> element */
+.header h1 {
+  font-size: 40px;
 }
-nav ul li, footer ul li {
-    display: inline;
-    margin-right: 20px;
-}
-a {
-    text-decoration: none;
-    color: #999;
-}
-a:hover {
