--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,3 @@
-.header {
-  padding: 80px; /* some padding */
-  text-align: center; /* center the text */
-  font-family: serif;
-    font-weight: normal;
-  background: #45a6c4; /* color of background */
-  color: rgb(255, 255, 255); /* white text color */
-}
-
-/* Increase the font size of the <h1> element */
-.header h1 {
-  font-size: 1000px;
-}
-
 body {
     margin: 60px auto;
     width: 70%;
@@ -31,3 +17,27 @@ a {
     color: #999;
 }
 a:hover {
+    text-decoration: underline;
+}
+h1 {
+    font-size: 3em;
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+}
+p {
+    font-size: 1.5em;
+    line-height: 1.4em;
+    color: #333;
+}
+footer {
+    border-top: 1px solid #d5d5d5;
+    font-size: .8em;
+}
+
+ul.posts { 
+    margin: 20px auto 40px; 
+    font-size: 1.5em;
+}
+
+ul.posts li {
+    list-style: none;
+}
