--- a/css/main.css
+++ b/css/main.css
@@ -13,8 +13,9 @@ p {
   font-size: 20px;
 }
 
-u1  {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+nav ul, footer ul {
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    padding: 0px;
+    list-style: none;
+    font-weight: bold;
 }
