--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,8 @@ h1 {
 p {
   color: #8aa366;
   text-align: center;
-  font-size: 20px;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 nav ul, footer ul {
