--- a/css/main.css
+++ b/css/main.css
@@ -1,29 +1,86 @@
+/*Background color of site*/ 
 body {
-  background-color: lightblue;
+  background-color: #98BBCD;
 }
 
+/*Top Navigation of Site*/
+#navbar {
+  background-color: #a3b697;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+#navbar a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 20px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links when hovering */
+#navbar a:hover {
+  background-color: #ddd;
+  color: #8aa366;
+}
+
+/* Add a color to the active/current link */
+#navbar a.active {
+  background-color: #d39da2;
+  color: white;
+}
+
+/*Home Headers*/
 h1 {
   color: white;
   text-align: center;
-  font-size: 30px;
-  font-weight: bold;
+  font-family: Lucida Calligraphy, cursive;
+  font-size: 40px;
+  font-weight: normal;
 }
 
 h2 {
-  color: #8aa366;
+  color: white;
   text-align: center;
-  font-size: 20px;
-  font-weight: bold;
+  font-family: Lucida Calligraphy, cursive;
+  font-size: 35px;
+  font-weight: normal;
+}
+/*Center image*/
+img.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
-nav ul, footer ul {
+h3 {
+  color: white;
+  text-align: center;
+  font-family: Lucida Calligraphy;
+  font-style: cursive;
+  font-size: 35px;
+  font-weight: normal;
+}
+
+p {
+ text-align: center;
+ font-family: Calibri;
+ font-style: italic;
+ font-size: 16px;
+ font-weight: normal;
+}
+
+/*Footers*/
+footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
 }
 
-nav ul li, footer ul li {
+footer ul li {
     display: inline;
     margin-right: 20px;
 }
