--- a/css/main.css
+++ b/css/main.css
@@ -4,13 +4,13 @@ body {
 }
 
 /*Top Navigation of Site*/
-.topnav {
+#navbar {
   background-color: #a3b697;
   overflow: hidden;
 }
 
 /* Style the links inside the navigation bar */
-.topnav a {
+#navbar a {
   float: left;
   color: #f2f2f2;
   text-align: center;
@@ -20,13 +20,13 @@ body {
 }
 
 /* Change the color of links when hovering */
-.topnav a:hover {
+#navbar a:hover {
   background-color: #ddd;
   color: #8aa366;
 }
 
 /* Add a color to the active/current link */
-#topnav a.active {
+#navbar a.active {
   background-color: #d39da2;
   color: white;
 }
