--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>{{ page.title }}</title>
+<!-- link to main stylesheet -->
+<link rel="stylesheet" type="text/css" href="/css/main.css">
+</head>
+ 
+<body>
+  
+<!-- Top navigation bar -->
+<div class="box" id="navbar">
+  <a class="active" href="#home">Home</a>
+  <a href="about.html">Kristen & Franklin</a>
+  <a href="#details">Wedding</a>
+  <a href="#RSVP">RSVP</a>
+</div>
 
+<div class="container">
+{{ content }}
+</div><!-- /.container -->
+
+<footer>
+<ul>
+	 <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+	 <li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+</ul>
+</footer>
+
+</body>
+</html>
