--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,8 @@
 
 <footer>
 <ul>
-	 <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	 <li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+	 <li><a href="mailto:lienhartkelsey@gmail.com">Email</a></li>
+	 <li><a href="https://github.com/klienha">github.com/klienha</a></li>
 </ul>
 </footer>
 
