--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ h1 {
   font-weight: normal;
 }
 
-h2 {
+h2, h3 {
   color: white;
   text-align: center;
   font-family: Lucida Calligraphy, cursive;
@@ -55,6 +55,15 @@ img.center {
   width: 50%;
 }
 
+/*Paragraph Center*/
+p {
+  color: black;
+  text-align: center;
+  font-family: Lucida Calligraphy, cursive;
+  font-size: 15px;
+  font-weight: normal;
+}
+  
 /*Footers*/
 footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
