--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   
 <!-- Top navigation bar -->
 <div class="box" id="navbar">
-  <a class="active" href="#home">Home</a>
+  <a class="active" href="index.html">Home</a>
   <a href="about.html">Kristen & Franklin</a>
   <a href="#details">Wedding</a>
   <a href="#RSVP">RSVP</a>
