--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 <div class="box" id="navbar">
   <a class="active" href="index.html">Home</a>
   <a href="about.html">Kristen & Franklin</a>
-  <a href="#details">Wedding</a>
+  <a href="wedding.html">Wedding</a>
   <a href="#RSVP">RSVP</a>
 </div>
 
