--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ h1 {
   font-weight: normal;
 }
 
-h2, h3 {
+h2, h3, h4 {
   color: white;
   text-align: center;
   font-family: Lucida Calligraphy, cursive;
