--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <a class="active" href="index.html">Home</a>
   <a href="about.html">Kristen & Franklin</a>
   <a href="wedding.html">Wedding</a>
-  <a href="#RSVP">RSVP</a>
+  <a href="RSVP.html">RSVP</a>
 </div>
 
 <div class="container">
